<!-- 
Moving Polygons Live Wallpaper
Copyright (C) 2013  LogicallyCreative.org

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
	<string name="app_name">Moving Polygons</string>

	<!-- Preferences -->
	<string name="preferences_title">Settings</string>

	<string name="shape_category_title">Shape</string>
	<string name="set_point_count_title">Set Point Count</string>
	<string name="point_count_title">Point Count</string>
	<string name="point_count_summary">Specifies the number of points.</string>

	<string name="echoes_category_title">Echoes</string>
	<string name="add_echoes_title">Add Echoes</string>
	<string name="set_echo_count_title">Set Echo Count</string>
	<string name="echo_count_title">Echos Count</string>
	<string name="echo_count_summary">Specifies the number of echoes.</string>
	<string name="set_echo_spacing_title">Set Echo Spacing</string>
	<string name="echo_spacing_title">Echo Spacing</string>
	<string name="echo_spacing_summary">Specifies the spacing between echoes.</string>

	<string name="color_category_title">Color</string>
	<string name="color_change_type_title">Color Chaning Method</string>
	<string name="color_change_type_summary">Specifies how the color should change.</string>

	<string name="misc_category_title">Miscellaneous</string>
	<string name="speed_title">Speed Factor</string>
	<string name="speed_summary">Specifies how fast the polygons should move.</string>

	<string name="legal_category_title">Legal</string>
	<string name="about_title">About</string>
	<string name="about_summary">About this app and legal information.</string>

	<!-- Legal -->
	<string name="copyright_line">Copyright &#169; 2014, LogicallyCreative.org</string>
	<string name="brief_legal_text">This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions.</string>
	<string name="license_link_label">For more information, please visit:</string>
	<string name="license_link">http://www.gnu.org/licenses/gpl.html</string>
</resources>
